<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_field"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".viewviewmodel.fragments.game.GameFragment">

    <TextView
        android:id="@+id/number_of_turns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/number_of_moves"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/number_of_turns_counter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/number_of_turns_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/_0"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_of_turns" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_marginHorizontal="@dimen/margin_20"
        android:columnCount="4"
        android:rowCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_of_turns_counter">

        <!-- Row 1 -->
        <TextView
            android:id="@+id/cell_1"
            style="@style/button_style"
            android:text="@string/one" />

        <TextView
            android:id="@+id/cell_2"
            style="@style/button_style"
            android:text="@string/_2" />

        <TextView
            android:id="@+id/cell_3"
            style="@style/button_style"
            android:text="@string/_3" />

        <TextView
            android:id="@+id/cell_4"
            style="@style/button_style"
            android:text="@string/_4" />

        <!-- Row 2 -->
        <TextView
            android:id="@+id/cell_5"
            style="@style/button_style"
            android:text="@string/_5" />

        <TextView
            android:id="@+id/cell_6"
            style="@style/button_style"
            android:text="@string/_6" />

        <TextView
            android:id="@+id/cell_7"
            style="@style/button_style"
            android:text="@string/_7" />

        <TextView
            android:id="@+id/cell_8"
            style="@style/button_style"
            android:text="@string/_8" />

        <!-- Row 3 -->
        <TextView
            android:id="@+id/cell_9"
            style="@style/button_style"
            android:text="@string/_9" />

        <TextView
            android:id="@+id/cell_10"
            style="@style/button_style"
            android:text="@string/_10" />

        <TextView
            android:id="@+id/cell_11"
            style="@style/button_style"
            android:text="@string/_11" />

        <TextView
            android:id="@+id/cell_12"
            style="@style/button_style"
            android:text="@string/_12" />

        <!-- Row 4 -->
        <TextView
            android:id="@+id/cell_13"
            style="@style/button_style"
            android:text="@string/_13" />

        <TextView
            android:id="@+id/cell_14"
            style="@style/button_style"
            android:text="@string/_14" />

        <TextView
            android:id="@+id/cell_15"
            style="@style/button_style"
            android:text="@string/_15" />

        <TextView
            android:id="@+id/cell_16"
            style="@style/button_style"
            android:background="@color/transparent"
            android:text="" />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>